--- a/ml/Experiments.ipynb
+++ b/ml/Experiments.ipynb
@@ -6121,7 +6121,7 @@
     "importlib.reload(utils)\n",
     "\n",
     "# Combined simulation and observed data into properly formatted dataframe\n",
-    "energy = utils.get_energy_df(energy_retrofit_baseline, energy_actual, one_hot=False, temporal_scale='hour', spatial_scale='building', add_context=False)\n",
+    "energy = utils.get_energy_df(energy_retrofit_baseline, energy_actual, one_hot=False, temporal_scale='hour', spatial_scale='building')\n",
     "\n",
     "train_folds, val_folds, test_folds = utils.make_seq_folds(folds, energy, timesteps, scalers=None)\n",
     "\n",
@@ -6969,13 +6969,13 @@
     "\n",
     "scalers = utils.make_seq_folds(folds, energy, timesteps, scalers=None, get_scalers=True)\n",
     "\n",
-    "energy_full = utils.get_energy_df(energy_retrofit_full, energy_actual, one_hot=False, temporal_scale='hour', spatial_scale='building', add_context=False)\n",
+    "energy_full = utils.get_energy_df(energy_retrofit_full, energy_actual, one_hot=False, temporal_scale='hour', spatial_scale='building')\n",
     "full_train_folds, full_val_folds, full_test_folds = utils.make_seq_folds(folds, energy_full, timesteps, scalers)\n",
     "\n",
-    "energy_light = utils.get_energy_df(energy_retrofit_light, energy_actual, one_hot=False, temporal_scale='hour', spatial_scale='building', add_context=False)\n",
+    "energy_light = utils.get_energy_df(energy_retrofit_light, energy_actual, one_hot=False, temporal_scale='hour', spatial_scale='building')\n",
     "light_train_folds, light_val_folds, light_test_folds = utils.make_seq_folds(folds, energy_light, timesteps, scalers)\n",
     "\n",
-    "energy_window = utils.get_energy_df(energy_retrofit_window, energy_actual, one_hot=False, temporal_scale='hour', spatial_scale='building', add_context=False)\n",
+    "energy_window = utils.get_energy_df(energy_retrofit_window, energy_actual, one_hot=False, temporal_scale='hour', spatial_scale='building')\n",
     "window_train_folds, window_val_folds, window_test_folds = utils.make_seq_folds(folds, energy_window, timesteps, scalers)"
    ]
   },
